--- a/chart/power/nginx.conf
+++ b/chart/power/nginx.conf
@@ -2,7 +2,7 @@
 # user              www www;  ## Default: nobody
 
 worker_processes  auto;
-error_log         "/dev/stdout";
+error_log         "/dev/stderr";
 pid               "/tmp/nginx.pid";
 
 events {
