Added error page and notfound page

--- a/power/angular.json
+++ b/power/angular.json
@@ -282,6 +282,7 @@
                             "/login",
                             "/logout",
                             "/feedback",
+                            "/notfound",
                             "/bodenrichtwerte",
                             "/grundstuecksmarktberichte",
                             "/landesgrundstuecksmarktberichte",
