--- a/power/package.json
+++ b/power/package.json
@@ -37,7 +37,7 @@
         "@nguniversal/express-engine": "^11.2.1",
         "@turf/turf": "^6.3.0",
         "bootstrap": "^4.6.0",
-        "bootstrap-icons": "^1.4.0",
+        "bootstrap-icons": "^1.4.1",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.9.1",
         "echarts": "^4.9.0",
@@ -50,7 +50,7 @@
         "knockout": "^3.5.1",
         "mapbox-gl": "^1.13.1",
         "ngx-bootstrap": "^6.2.0",
-        "ngx-bootstrap-icons": "^1.4.2",
+        "ngx-bootstrap-icons": "^1.4.4",
         "ngx-echarts": "^5.2.2",
         "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
@@ -62,7 +62,7 @@
         "sass": "^1.32.8",
         "semver": "^7.3.5",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.37",
+        "survey-angular": "1.8.37",
         "tslib": "^2.1.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.4"
@@ -88,8 +88,8 @@
         "@types/mapbox-gl": "^1.13.0",
         "@types/node": "^14.14.37",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
-        "@typescript-eslint/parser": "^4.19.0",
+        "@typescript-eslint/eslint-plugin": "^4.20.0",
+        "@typescript-eslint/parser": "^4.20.0",
         "codelyzer": "^6.0.1",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
@@ -104,14 +104,14 @@
         "jasmine-core": "^3.7.1",
         "jasmine-reporters": "^2.4.0",
         "jasmine-spec-reporter": "^6.0.0",
-        "karma": "^6.3.1",
+        "karma": "^6.3.2",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^2.0.3",
         "karma-jasmine": "^4.0.1",
         "karma-jasmine-html-reporter": "^1.5.0",
         "karma-junit-reporter": "^2.0.1",
         "node-blob": "^0.0.2",
-        "postcss": "^8.2.8",
+        "postcss": "^8.2.9",
         "protractor": "^7.0.0",
         "resize-observer-polyfill": "^1.5.1",
         "stylelint": "^13.12.0",
