--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -1,17 +1,17 @@
 {
-    "index": "/index.html",
+    "index": "index.html",
     "assetGroups": [
         {
             "name": "app",
             "installMode": "prefetch",
             "resources": {
                 "files": [
-                    "/favicon.ico",
-                    "/index.html",
-                    "/**/index.html",
-                    "/manifest.webmanifest",
-                    "/*.css",
-                    "/*.js"
+                    "favicon.ico",
+                    "index.html",
+                    "**/index.html",
+                    "manifest.webmanifest",
+                    "*.css",
+                    "*.js"
                 ]
             }
         },
@@ -21,8 +21,8 @@
             "updateMode": "prefetch",
             "resources": {
                 "files": [
-                    "/assets/**",
-                    "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)",
+                    "assets/**",
+                    "*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)",
                     "!/assets/config/config.json",
                     "!/assets/version.json"
                 ],
