--- a/chart/power/nginx.conf
+++ b/chart/power/nginx.conf
@@ -3,7 +3,7 @@
 
 worker_processes  auto;
 error_log         "/dev/stderr";
-pid               "/tmp/nginx.pid";
+pid               "/opt/bitnami/nginx/tmp/nginx.pid";
 
 events {
     worker_connections  1024;
@@ -18,11 +18,11 @@ http {
     access_log    "/dev/stdout";
     add_header    X-Frame-Options SAMEORIGIN;
 
-    client_body_temp_path  "/tmp/client_body" 1 2;
-    proxy_temp_path        "/tmp/proxy" 1 2;
-    fastcgi_temp_path      "/tmp/fastcgi" 1 2;
-    scgi_temp_path         "/tmp/scgi" 1 2;
-    uwsgi_temp_path        "/tmp/uwsgi" 1 2;
+    client_body_temp_path  "/opt/bitnami/nginx/tmp/client_body" 1 2;
+    proxy_temp_path        "/opt/bitnami/nginx/tmp/proxy" 1 2;
+    fastcgi_temp_path      "/opt/bitnami/nginx/tmp/fastcgi" 1 2;
+    scgi_temp_path         "/opt/bitnami/nginx/tmp/scgi" 1 2;
+    uwsgi_temp_path        "/opt/bitnami/nginx/tmp/uwsgi" 1 2;
 
     sendfile           on;
     tcp_nopush         on;
