--- a/power/package.json
+++ b/power/package.json
@@ -62,7 +62,7 @@
         "sass": "^1.32.8",
         "semver": "^7.3.5",
         "showdown": "^1.9.1",
-        "survey-angular": "1.8.37",
+        "survey-angular": "^1.8.39",
         "tslib": "^2.1.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.4"
