--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -1,5 +1,11 @@
 server {
   listen 8081;
+  server_name "~^www\.(.*)$";
+  return 301 $scheme://$1$request_uri;
+}
+
+server {
+  listen 8081;
   root /app;
   access_log off;
 
