--- a/power/package.json
+++ b/power/package.json
@@ -19,20 +19,20 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/core": "^11.2.6",
-        "@angular-devkit/schematics": "^11.2.6",
-        "@angular/animations": "^11.2.7",
+        "@angular-devkit/core": "^11.2.7",
+        "@angular-devkit/schematics": "^11.2.7",
+        "@angular/animations": "^11.2.8",
         "@angular/cdk": "^11.2.7",
-        "@angular/common": "^11.2.7",
-        "@angular/compiler": "^11.2.7",
-        "@angular/core": "^11.2.7",
-        "@angular/forms": "^11.2.7",
-        "@angular/localize": "^11.2.7",
-        "@angular/platform-browser": "^11.2.7",
-        "@angular/platform-browser-dynamic": "^11.2.7",
-        "@angular/platform-server": "^11.2.7",
-        "@angular/router": "^11.2.7",
-        "@angular/service-worker": "^11.2.7",
+        "@angular/common": "^11.2.8",
+        "@angular/compiler": "^11.2.8",
+        "@angular/core": "^11.2.8",
+        "@angular/forms": "^11.2.8",
+        "@angular/localize": "^11.2.8",
+        "@angular/platform-browser": "^11.2.8",
+        "@angular/platform-browser-dynamic": "^11.2.8",
+        "@angular/platform-server": "^11.2.8",
+        "@angular/router": "^11.2.8",
+        "@angular/service-worker": "^11.2.8",
         "@ng-bootstrap/ng-bootstrap": "^9.1.0",
         "@nguniversal/express-engine": "^11.2.1",
         "@turf/turf": "^6.3.0",
@@ -46,11 +46,11 @@
         "fast-xml-parser": "^3.18.0",
         "fuse.js": "^6.4.6",
         "geojson": "^0.5.0",
-        "hyphen": "^1.6.2",
+        "hyphen": "^1.6.4",
         "knockout": "^3.5.1",
         "mapbox-gl": "^1.13.1",
         "ngx-bootstrap": "^6.2.0",
-        "ngx-bootstrap-icons": "^1.4.4",
+        "ngx-bootstrap-icons": "1.4.4",
         "ngx-echarts": "^5.2.2",
         "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
@@ -62,24 +62,24 @@
         "sass": "^1.32.8",
         "semver": "^7.3.5",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.39",
-        "tslib": "^2.1.0",
+        "survey-angular": "^1.8.41",
+        "tslib": "^2.2.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/architect": "^0.1102.6",
-        "@angular-devkit/build-angular": "^0.1102.6",
+        "@angular-devkit/architect": "^0.1102.7",
+        "@angular-devkit/build-angular": "^0.1102.7",
         "@angular-eslint/builder": "^2.0.0",
         "@angular-eslint/eslint-plugin": "^2.0.0",
         "@angular-eslint/eslint-plugin-template": "^2.0.0",
         "@angular-eslint/schematics": "^2.0.2",
         "@angular-eslint/template-parser": "^2.0.0",
-        "@angular/cli": "^11.2.6",
-        "@angular/compiler-cli": "^11.2.7",
-        "@angular/language-service": "^11.2.7",
+        "@angular/cli": "^11.2.7",
+        "@angular/compiler-cli": "^11.2.8",
+        "@angular/language-service": "^11.2.8",
         "@nguniversal/builders": "^11.2.1",
-        "@schematics/angular": "^11.2.6",
+        "@schematics/angular": "^11.2.7",
         "@types/express": "^4.17.0",
         "@types/geojson": "^7946.0.7",
         "@types/jasmine": "^3.6.9",
@@ -88,8 +88,8 @@
         "@types/mapbox-gl": "^1.13.0",
         "@types/node": "^14.14.37",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.20.0",
-        "@typescript-eslint/parser": "^4.20.0",
+        "@typescript-eslint/eslint-plugin": "^4.21.0",
+        "@typescript-eslint/parser": "^4.21.0",
         "codelyzer": "^6.0.1",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
@@ -100,7 +100,7 @@
         "eslint-plugin-no-unsanitized": "^3.1.4",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
-        "html-validate": "^4.8.0",
+        "html-validate": "^4.9.0",
         "jasmine-core": "^3.7.1",
         "jasmine-reporters": "^2.4.0",
         "jasmine-spec-reporter": "^6.0.0",
