--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -90,6 +90,7 @@ networkPolicy:
       podSelector:
         matchLabels:
           app.kubernetes.io/name: kong
+          app.kubernetes.io/instance: kong
 
 metrics:
   enabled: true
