--- a/chart/power/templates/deployment.yaml
+++ b/chart/power/templates/deployment.yaml
@@ -89,9 +89,7 @@ spec:
         {{- if .Values.metrics.enabled }}
         - name: metrics
           securityContext:
-            runAsUser: 1001
-            runAsNonRoot: true
-            readOnlyRootFilesystem: true
+            {{- toYaml .Values.metrics.containerSecurityContext | nindent 12 }}
           image: "{{ .Values.metrics.image.registry }}/{{ .Values.metrics.image.repository }}:{{ .Values.metrics.image.tag }}"
           imagePullPolicy: {{ .Values.metrics.image.pullPolicy | quote }}
           command: ['/usr/bin/exporter', '-nginx.scrape-uri', 'http://127.0.0.1:8080/status']
