Vector tiles over reverse proxy

--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -22,12 +22,10 @@
             "resources": {
                 "files": [
                     "/assets/**",
+                    "/vector-tiles/**",
                     "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)",
                     "!/assets/config/config.json",
                     "!/assets/version.json"
-                ],
-                "urls": [
-                    "https://s3.ap.cloud-object-storage.appdomain.cloud/vector-tiles-lgln/**"
                 ]
             }
         }
