--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -124,7 +124,6 @@ server {
     proxy_hide_header cf-cache-status;
     proxy_hide_header cf-ray;
     proxy_hide_header cf-request-id;
-    proxy_hide_header expect-ct;
     proxy_hide_header gitlab-lb;
     proxy_hide_header gitlab-sv;
     proxy_hide_header x-gitlab-feature-category;
@@ -190,6 +189,9 @@ server {
     proxy_hide_header Permissions-Policy;
     proxy_hide_header X-Frame-Options;
     proxy_hide_header X-XSS-Protection;
+    proxy_hide_header x-amz-request-id;
+    proxy_hide_header x-clv-request-id;
+    proxy_hide_header x-clv-s3-version;
     error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
   }
 }
