--- a/power/angular.json
+++ b/power/angular.json
@@ -282,6 +282,7 @@
                             "/login",
                             "/logout",
                             "/feedback",
+                            "/ogc-services",
                             "/notfound",
                             "/bodenrichtwerte",
                             "/grundstuecksmarktberichte",
