Changed nginx config (new COS bucket for vector tiles)

--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -163,8 +163,8 @@ server {
   }
 
   location /vector-tiles/ {
-    rewrite ^\/vector-tiles\/(.*) /vector-tiles-lgln/$1 break;
-    proxy_pass https://s3.private.ap.cloud-object-storage.appdomain.cloud/;
+    rewrite ^\/vector-tiles\/(.*) /vector-tiles-lgln-2021/$1 break;
+    proxy_pass https://s3.private.eu-de.cloud-object-storage.appdomain.cloud/;
 
     proxy_redirect off;
     proxy_ssl_server_name on;
