--- a/chart/power/Chart.yaml
+++ b/chart/power/Chart.yaml
@@ -4,6 +4,7 @@ description: Immobilienmarkt.NI
 type: application
 version: 0.2.0
 appVersion: 1.0.0
+home: https://gitlab.com/lgln/power.ni/power-frontend
 maintainers:
   - name: Laurent Skiba
     email: laurent.skiba@lgln.niedersachsen.de
