--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -4,6 +4,10 @@ server {
   access_log off;
 
   # compression
+  charset utf-8;
+  types {
+    application/manifest+json webmanifest;
+  }
   gzip on;
   gzip_static on;
   gzip_types application/javascript application/json application/octet-stream image/x-icon text/css;
