--- a/chart/power/nginx.conf
+++ b/chart/power/nginx.conf
@@ -11,7 +11,12 @@ events {
 
 http {
     include       mime.types;
+    types {
+        application/manifest+json webmanifest;
+    }
     default_type  application/octet-stream;
+    charset utf-8;
+    charset_types text/html text/xml text/plain text/css application/javascript application/json application/manifest+json application/rss+xml;
     log_format    main '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status  $body_bytes_sent "$http_referer" '
                        '"$http_user_agent" "$http_x_forwarded_for"';
