--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -4,10 +4,6 @@ server {
   access_log off;
 
   # compression
-  charset utf-8;
-  types {
-    application/manifest+json webmanifest;
-  }
   gzip on;
   gzip_static on;
   gzip_types application/javascript application/json application/octet-stream image/x-icon text/css;
@@ -33,9 +29,7 @@ server {
   large_client_header_buffers 2 1k;
 
   # enable cache
-  add_header Cache-Control 'public, must-revalidate, proxy-revalidate';
-  add_header Pragma 'public';
-  expires 30d;
+  add_header Cache-Control 'max-age=31536000';
   etag on;
 
   # Deny all attempts to access hidden files such as .htaccess or .htpasswd
