Fixed some stuff

--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -6,7 +6,7 @@ server {
   # compression
   gzip on;
   gzip_static on;
-  gzip_types application/javascript application/json application/octet-stream image/x-icon text/css;
+  gzip_types text/plain text/css application/javascript text/xml application/rss+xml text/csv application/json application/manifest+json application/geo+json application/octet-stream;
 
   # security settings
   server_tokens off;
@@ -29,7 +29,7 @@ server {
   large_client_header_buffers 2 1k;
 
   # enable cache
-  add_header Cache-Control 'max-age=31536000';
+  add_header Cache-Control "max-age=31536000" always;
   etag on;
 
   # Deny all attempts to access hidden files such as .htaccess or .htpasswd
