--- a/chart/power/nginx.conf
+++ b/chart/power/nginx.conf
@@ -1,5 +1,5 @@
 # Based on https://www.nginx.com/resources/wiki/start/topics/examples/full/#nginx-conf
-# user              www www;  ## Default: nobody
+user              www www;  ## Default: nobody
 
 worker_processes  auto;
 error_log         "/dev/stderr";
@@ -13,10 +13,12 @@ http {
     include       mime.types;
     types {
         application/manifest+json webmanifest;
+        application/geo+json      geojson;
+        text/csv                  csv;
     }
     default_type  application/octet-stream;
     charset utf-8;
-    charset_types text/html text/xml text/plain text/css application/javascript application/json application/manifest+json application/rss+xml;
+    charset_types text/plain text/css application/javascript text/xml application/rss+xml text/html text/csv application/json application/manifest+json application/geo+json;
     log_format    main '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status  $body_bytes_sent "$http_referer" '
                        '"$http_user_agent" "$http_x_forwarded_for"';
@@ -33,10 +35,11 @@ http {
     tcp_nopush         on;
     tcp_nodelay        off;
     gzip               on;
+    gzip_static        on;
     gzip_http_version  1.0;
     gzip_comp_level    2;
     gzip_proxied       any;
-    gzip_types         text/plain text/css application/javascript text/xml application/xml+rss;
+    gzip_types         text/plain text/css application/javascript text/xml application/rss+xml;
     keepalive_timeout  65;
     ssl_protocols      TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers        HIGH:!aNULL:!MD5;
