--- a/power/package.json
+++ b/power/package.json
@@ -54,14 +54,14 @@
         "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
-        "nouislider": "^14.7.0",
+        "nouislider": "^15.0.0",
         "proj4": "^2.7.2",
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
         "sass": "^1.32.12",
         "semver": "^7.3.5",
         "showdown": "^1.9.1",
-        "survey-angular": "1.8.44",
+        "survey-angular": "^1.8.46",
         "tslib": "^2.2.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.11.4"
@@ -92,10 +92,10 @@
         "codelyzer": "^6.0.1",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
-        "electron": "^12.0.5",
+        "electron": "^12.0.6",
         "eslint": "^7.25.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsdoc": "^32.3.3",
+        "eslint-plugin-jsdoc": "^33.0.0",
         "eslint-plugin-no-unsanitized": "^3.1.5",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
@@ -113,7 +113,7 @@
         "postcss": "^8.2.13",
         "protractor": "^7.0.0",
         "resize-observer-polyfill": "^1.5.1",
-        "stylelint": "^13.13.0",
+        "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "ts-node": "^9.1.1",
         "typescript": "~4.0.7"
