Replaced mapbox-gl JS with maplibre-gl

--- a/power/angular.json
+++ b/power/angular.json
@@ -48,8 +48,7 @@
                         "allowedCommonJsDependencies": [
                             "echarts",
                             "hyphen",
-                            "showdown",
-                            "@mapbox/mapbox-gl-geocoder"
+                            "showdown"
                         ]
                     },
                     "configurations": {
