--- a/power/package.json
+++ b/power/package.json
@@ -48,10 +48,9 @@
         "geojson": "^0.5.0",
         "hyphen": "^1.6.4",
         "knockout": "^3.5.1",
-        "mapbox-gl": "^1.13.1",
+        "maplibre-gl": "^1.14.0",
         "ngx-bootstrap": "^6.2.0",
         "ngx-echarts": "^5.2.2",
-        "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
         "nouislider": "^15.1.1",
@@ -84,7 +83,7 @@
         "@types/jasmine": "^3.7.4",
         "@types/jasminewd2": "^2.0.9",
         "@types/lodash": "^4.14.170",
-        "@types/mapbox-gl": "^1.13.1",
+        "@types/maplibre-gl": "^1.13.1",
         "@types/node": "^14.17.1",
         "@types/showdown": "^1.9.3",
         "@typescript-eslint/eslint-plugin": "^4.25.0",
