--- a/power/package.json
+++ b/power/package.json
@@ -35,10 +35,16 @@
         "@angular/service-worker": "^11.2.14",
         "@ng-bootstrap/ng-bootstrap": "^9.1.1",
         "@nguniversal/express-engine": "^11.2.1",
-        "@turf/turf": "^6.3.0",
+        "@turf/area": "^6.3.0",
+        "@turf/buffer": "^6.3.0",
+        "@turf/intersect": "^6.3.0",
+        "@turf/unkink-polygon": "^6.3.0",
+        "@turf/point-on-feature": "^6.3.0",
+        "@turf/projection": "^6.3.0",
+        "@turf/union": "^6.3.0",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.5.0",
-        "core-js": "^3.13.0",
+        "core-js": "^3.13.1",
         "echarts": "^4.9.0",
         "epsg": "^0.5.0",
         "fuse.js": "^6.4.6",
@@ -46,7 +52,7 @@
         "hyphen": "^1.6.4",
         "maplibre-gl": "^1.14.0",
         "ngx-bootstrap": "^6.2.0",
-        "ngx-echarts": "^5.2.2",
+        "ngx-echarts": "^6.0.1",
         "ngx-showdown": "^6.0.0",
         "ngx-smooth-dnd": "^0.4.1",
         "nouislider": "^15.1.1",
@@ -79,17 +85,17 @@
         "@types/maplibre-gl": "^1.13.1",
         "@types/node": "^14.17.1",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.25.0",
-        "@typescript-eslint/parser": "^4.25.0",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
         "eslint": "^7.27.0",
-        "eslint-plugin-jsdoc": "^35.0.0",
+        "eslint-plugin-jsdoc": "^35.1.2",
         "eslint-plugin-no-unsanitized": "^3.1.5",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
         "express": "^4.15.2",
-        "html-validate": "^4.12.0",
+        "html-validate": "^4.13.1",
         "jasmine-core": "^3.7.1",
         "jasmine-reporters": "^2.4.0",
         "jasmine-spec-reporter": "^7.0.0",
@@ -106,7 +112,7 @@
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "ts-node": "^10.0.0",
-        "typescript": "~4.0.7"
+        "typescript": "~4.1.5"
     },
     "browser": {
         "fs": false,
