--- a/power/package.json
+++ b/power/package.json
@@ -19,22 +19,22 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/core": "^11.2.13",
-        "@angular-devkit/schematics": "^11.2.13",
-        "@angular/animations": "^11.2.14",
-        "@angular/cdk": "^11.2.13",
-        "@angular/common": "^11.2.14",
-        "@angular/compiler": "^11.2.14",
-        "@angular/core": "^11.2.14",
-        "@angular/forms": "^11.2.14",
-        "@angular/localize": "^11.2.14",
-        "@angular/platform-browser": "^11.2.14",
-        "@angular/platform-browser-dynamic": "^11.2.14",
-        "@angular/platform-server": "^11.2.14",
-        "@angular/router": "^11.2.14",
-        "@angular/service-worker": "^11.2.14",
+        "@angular-devkit/core": "^12.0.2",
+        "@angular-devkit/schematics": "^12.0.2",
+        "@angular/animations": "^12.0.2",
+        "@angular/cdk": "^12.0.2",
+        "@angular/common": "^12.0.2",
+        "@angular/compiler": "^12.0.2",
+        "@angular/core": "^12.0.2",
+        "@angular/forms": "^12.0.2",
+        "@angular/localize": "^12.0.2",
+        "@angular/platform-browser": "^12.0.2",
+        "@angular/platform-browser-dynamic": "^12.0.2",
+        "@angular/platform-server": "^12.0.2",
+        "@angular/router": "^12.0.2",
+        "@angular/service-worker": "^12.0.2",
         "@ng-bootstrap/ng-bootstrap": "^9.1.1",
-        "@nguniversal/express-engine": "^11.2.1",
+        "@nguniversal/express-engine": "^12.0.1",
         "@turf/area": "^6.3.0",
         "@turf/buffer": "^6.3.0",
         "@turf/intersect": "^6.3.0",
@@ -63,21 +63,21 @@
         "survey-angular": "^1.8.49",
         "tslib": "^2.2.0",
         "web-animations-js": "^2.3.2",
-        "zone.js": "^0.11.4"
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/architect": "^0.1102.13",
-        "@angular-devkit/build-angular": "^0.1102.13",
-        "@angular-eslint/builder": "^4.3.0",
-        "@angular-eslint/eslint-plugin": "^4.3.0",
-        "@angular-eslint/eslint-plugin-template": "^4.3.0",
-        "@angular-eslint/schematics": "^4.3.0",
-        "@angular-eslint/template-parser": "^4.3.0",
-        "@angular/cli": "^11.2.13",
-        "@angular/compiler-cli": "^11.2.14",
-        "@angular/language-service": "^11.2.14",
-        "@nguniversal/builders": "^11.2.1",
-        "@schematics/angular": "^11.2.13",
+        "@angular-devkit/architect": "^0.1200.2",
+        "@angular-devkit/build-angular": "^12.0.2",
+        "@angular-eslint/builder": "^12.0.0",
+        "@angular-eslint/eslint-plugin": "^12.0.0",
+        "@angular-eslint/eslint-plugin-template": "^12.0.0",
+        "@angular-eslint/schematics": "^12.1.0",
+        "@angular-eslint/template-parser": "^12.0.0",
+        "@angular/cli": "^12.0.2",
+        "@angular/compiler-cli": "^12.0.2",
+        "@angular/language-service": "^12.0.2",
+        "@nguniversal/builders": "^12.0.1",
+        "@schematics/angular": "^12.0.2",
         "@types/express": "^4.17.12",
         "@types/geojson": "^7946.0.7",
         "@types/jasmine": "^3.7.6",
@@ -85,11 +85,11 @@
         "@types/maplibre-gl": "^1.13.1",
         "@types/node": "^14.17.1",
         "@types/showdown": "^1.9.3",
-        "@typescript-eslint/eslint-plugin": "^4.26.0",
-        "@typescript-eslint/parser": "^4.26.0",
+        "@typescript-eslint/eslint-plugin": "4.26.0",
+        "@typescript-eslint/parser": "4.26.0",
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
-        "eslint": "^7.27.0",
+        "eslint": "^7.26.0",
         "eslint-plugin-jsdoc": "^35.1.2",
         "eslint-plugin-no-unsanitized": "^3.1.5",
         "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -112,7 +112,7 @@
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "ts-node": "^10.0.0",
-        "typescript": "~4.1.5"
+        "typescript": "~4.2.4"
     },
     "browser": {
         "fs": false,
