--- a/power/angular.json
+++ b/power/angular.json
@@ -47,7 +47,8 @@
                         "allowedCommonJsDependencies": [
                             "echarts",
                             "hyphen",
-                            "showdown"
+                            "showdown",
+                            "rbush"
                         ],
                         "vendorChunk": true,
                         "extractLicenses": false,
