--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -43,6 +43,12 @@ server {
     return 444;
   }
 
+  # Kubernetes health check
+  location /health {
+    access_log off;
+    return 200 "healthy\n";
+  }
+
   location / {
     try_files $uri $uri/index.html $uri/ /index.html =404;
   }
@@ -55,9 +61,9 @@ server {
     try_files $uri $uri/index.html $uri/ /en/index.html =404;
   }
 
-  location /health {
-    access_log off;
-    return 200 "healthy\n";
+  # Disable cache for html files
+  location ~ \.html$ {
+    add_header Cache-Control "public, max-age=180" always;
   }
 
   location /geocoding/geosearch/ {
