--- a/chart/power/nginx.conf
+++ b/chart/power/nginx.conf
@@ -37,6 +37,7 @@ http {
     tcp_nodelay        off;
     gzip               on;
     gzip_static        on;
+    gzip_vary          on;
     gzip_http_version  1.0;
     gzip_comp_level    2;
     gzip_proxied       any;
