--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -6,6 +6,7 @@ server {
   # compression
   gzip on;
   gzip_static on;
+  gzip_vary   on;
   gzip_types text/plain text/css application/javascript text/xml application/xml application/rss+xml application/atom+xml text/csv application/json image/svg+xml application/manifest+json application/geo+json application/octet-stream;
 
   # security settings
@@ -51,14 +52,26 @@ server {
 
   location / {
     try_files $uri $uri/index.html $uri/ /index.html =404;
+
+    location ~ \.html$ {
+      add_header Cache-Control "public, max-age=180" always;
+    }
   }
 
   location /de-simple/ {
     try_files $uri $uri/index.html $uri/ /de-simple/index.html =404;
+
+    location ~ \.html$ {
+      add_header Cache-Control "public, max-age=180" always;
+    }
   }
 
   location /en/ {
     try_files $uri $uri/index.html $uri/ /en/index.html =404;
+
+    location ~ \.html$ {
+      add_header Cache-Control "public, max-age=180" always;
+    }
   }
 
   location /geocoding/geosearch/ {
