Removed CSP entry

--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -13,7 +13,7 @@ server {
   server_tokens off;
   proxy_cookie_path / "/; HTTPOnly; Secure";
   add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
-  add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; script-src-attr 'unsafe-inline'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; font-src 'self'; object-src 'none'; manifest-src 'self'; child-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https:;" always;
+  add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; font-src 'self'; object-src 'none'; manifest-src 'self'; child-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https:;" always;
   add_header X-Content-Type-Options "nosniff" always;
   add_header Access-Control-Allow-Origin "*" always;
   add_header Cross-Origin-Resource-Policy "same-origin" always;
