Improved nginx config

--- a/chart/power/nginx.conf
+++ b/chart/power/nginx.conf
@@ -2,7 +2,7 @@
 # user              www www;  ## Default: nobody
 
 worker_processes  auto;
-error_log         "/dev/stderr";
+error_log         "/dev/stdout" warn;
 pid               "/opt/bitnami/nginx/tmp/nginx.pid";
 
 events {
@@ -41,11 +41,13 @@ http {
     gzip_http_version  1.0;
     gzip_comp_level    2;
     gzip_proxied       any;
-    gzip_types         text/plain text/css application/javascript text/xml application/xml application/rss+xml application/atom+xml;
-    keepalive_timeout  65;
+    gzip_types         text/plain text/css application/javascript text/xml application/xml application/rss+xml application/atom+xml text/csv application/json image/svg+xml application/manifest+json application/geo+json application/octet-stream;
+    keepalive_timeout 30;
+    send_timeout 30;
+    client_max_body_size 100K;
+    large_client_header_buffers 2 1k;
     ssl_protocols      TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers        HIGH:!aNULL:!MD5;
-    client_max_body_size 80M;
     server_tokens off;
 
     include  "/opt/bitnami/nginx/conf/server_blocks/*.conf";
