--- a/chart/power/power.conf
+++ b/chart/power/power.conf
@@ -3,46 +3,8 @@ server {
   root /app;
   access_log off;
 
-  # compression
-  gzip on;
-  gzip_static on;
-  gzip_vary   on;
-  gzip_types text/plain text/css application/javascript text/xml application/xml application/rss+xml application/atom+xml text/csv application/json image/svg+xml application/manifest+json application/geo+json application/octet-stream;
-
   # security settings
-  server_tokens off;
-  proxy_cookie_path / "/; HTTPOnly; Secure";
-  add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;" always;
-  add_header Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline' 'self'; img-src 'self' https: data:; font-src 'self'; object-src 'none'; manifest-src 'self'; child-src 'self' blob:; worker-src 'self' blob:; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; connect-src 'self' https:;" always;
-  add_header X-Content-Type-Options "nosniff" always;
-  add_header Access-Control-Allow-Origin "*" always;
-  add_header Cross-Origin-Resource-Policy "same-origin" always;
-  add_header Cross-Origin-Opener-Policy "same-origin" always;
-  add_header Cross-Origin-Embedder-Policy "require-corp" always;
-  add_header Referrer-Policy "no-referrer" always;
-  add_header Expect-CT "max-age=86400, enforce" always;
-  add_header Permissions-Policy "geolocation=(self),camera=(),microphone=(),usb=(),payment=(),fullscreen=()" always;
-  add_header X-Frame-Options "DENY" always;
-  add_header X-XSS-Protection "1; mode=block" always;
-  keepalive_timeout 30;
-  send_timeout 30;
-  client_max_body_size 100K;
-  large_client_header_buffers 2 1k;
-
-  # enable cache
-  add_header Cache-Control "public, max-age=31536000" always;
-  etag on;
-
-  # Deny all attempts to access hidden files such as .htaccess or .htpasswd
-  location ~ /\. {
-    deny all;
-    return 404;
-  }
-
-  # Deny all not needed http methods
-  if ($request_method !~ ^(GET|HEAD|POST|OPTIONS)$) {
-    return 444;
-  }
+  include "/opt/bitnami/nginx/conf/custom/security.conf";
 
   # Kubernetes health check
   location /health {
@@ -50,89 +12,38 @@ server {
     return 200 "healthy\n";
   }
 
+  # enable cache
+  add_header Cache-Control "public, max-age=180" always;
+  etag on;
+
   location / {
     try_files $uri $uri/index.html $uri/ /index.html =404;
-
-    location ~ \.html$ {
-      add_header Cache-Control "public, max-age=180" always;
-    }
+    include "/opt/bitnami/nginx/conf/custom/cache.conf";
   }
 
   location /de-simple/ {
     try_files $uri $uri/index.html $uri/ /de-simple/index.html =404;
-
-    location ~ \.html$ {
-      add_header Cache-Control "public, max-age=180" always;
-    }
+    include "/opt/bitnami/nginx/conf/custom/cache.conf";
   }
 
   location /en/ {
     try_files $uri $uri/index.html $uri/ /en/index.html =404;
-
-    location ~ \.html$ {
-      add_header Cache-Control "public, max-age=180" always;
-    }
+    include "/opt/bitnami/nginx/conf/custom/cache.conf";
   }
 
   location /geocoding/geosearch/ {
     rewrite ^\/geocoding\/geosearch\/(.*) /gdz_ortssuche__${BKG_GEOCODING_SECRET}/geosearch.json$1 break;
     proxy_pass https://sg.geodatenzentrum.de/;
 
-    proxy_redirect off;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
-    proxy_set_header Cookie "";
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_hide_header Set-Cookie;
-    proxy_hide_header Server;
-    proxy_hide_header X-Powered-By;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-    proxy_hide_header expires;
-    proxy_hide_header etag;
-    proxy_hide_header Strict-Transport-Security;
-    proxy_hide_header Content-Security-Policy;
-    proxy_hide_header X-Content-Type-Options;
-    proxy_hide_header Access-Control-Allow-Origin;
-    proxy_hide_header Referrer-Policy;
-    proxy_hide_header Expect-CT;
-    proxy_hide_header Permissions-Policy;
-    proxy_hide_header X-Frame-Options;
-    proxy_hide_header X-XSS-Protection;
     proxy_hide_header gdz-geocode-statistic;
     proxy_hide_header gdz-geocode-statistic-total;
-    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
 
   location /feedback-rss/ {
     rewrite ^\/feedback-rss\/(.*) /Kay-LGLN/power/-/issues.atom break;
     proxy_pass https://gitlab.com/;
 
-    proxy_redirect off;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
-    proxy_set_header Cookie "";
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_hide_header Set-Cookie;
-    proxy_hide_header Server;
-    proxy_hide_header X-Powered-By;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-    proxy_hide_header expires;
-    proxy_hide_header etag;
-    proxy_hide_header Strict-Transport-Security;
-    proxy_hide_header Content-Security-Policy;
-    proxy_hide_header X-Content-Type-Options;
-    proxy_hide_header Access-Control-Allow-Origin;
-    proxy_hide_header Referrer-Policy;
-    proxy_hide_header Expect-CT;
-    proxy_hide_header Permissions-Policy;
-    proxy_hide_header X-Frame-Options;
-    proxy_hide_header X-XSS-Protection;
     proxy_hide_header cf-cache-status;
     proxy_hide_header cf-ray;
     proxy_hide_header cf-request-id;
@@ -141,102 +52,33 @@ server {
     proxy_hide_header x-gitlab-feature-category;
     proxy_hide_header x-request-id;
     proxy_hide_header x-runtime;
-    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
 
   location /boris-print/ {
     rewrite ^\/boris-print\/(.*) /boris/brwdirect$1 break;
     proxy_pass https://www.boris.niedersachsen.de/;
 
-    proxy_redirect off;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
-    proxy_set_header Cookie "";
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_hide_header Set-Cookie;
-    proxy_hide_header Server;
-    proxy_hide_header X-Powered-By;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-    proxy_hide_header expires;
-    proxy_hide_header etag;
-    proxy_hide_header Strict-Transport-Security;
-    proxy_hide_header Content-Security-Policy;
-    proxy_hide_header X-Content-Type-Options;
-    proxy_hide_header Access-Control-Allow-Origin;
-    proxy_hide_header Referrer-Policy;
-    proxy_hide_header Expect-CT;
-    proxy_hide_header Permissions-Policy;
-    proxy_hide_header X-Frame-Options;
-    proxy_hide_header X-XSS-Protection;
-    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
 
   location /vector-tiles/ {
     rewrite ^\/vector-tiles\/(.*) /vector-tiles-lgln-2021/$1 break;
     proxy_pass https://s3.private.eu-de.cloud-object-storage.appdomain.cloud/;
 
-    proxy_redirect off;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
-    proxy_set_header Cookie "";
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_hide_header Set-Cookie;
-    proxy_hide_header Server;
-    proxy_hide_header X-Powered-By;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-    proxy_hide_header expires;
-    proxy_hide_header etag;
-    proxy_hide_header Strict-Transport-Security;
-    proxy_hide_header Content-Security-Policy;
-    proxy_hide_header X-Content-Type-Options;
-    proxy_hide_header Access-Control-Allow-Origin;
-    proxy_hide_header Referrer-Policy;
-    proxy_hide_header Expect-CT;
-    proxy_hide_header Permissions-Policy;
-    proxy_hide_header X-Frame-Options;
-    proxy_hide_header X-XSS-Protection;
     proxy_hide_header x-amz-request-id;
     proxy_hide_header x-clv-request-id;
     proxy_hide_header x-clv-s3-version;
-    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
 
   location /download/ {
     rewrite ^\/download\/(.*) /grundstuecksmarktberichte/$1 break;
     proxy_pass https://s3.private.eu-de.cloud-object-storage.appdomain.cloud/;
 
-    proxy_redirect off;
-    proxy_ssl_server_name on;
-    proxy_intercept_errors on;
-    proxy_set_header Cookie "";
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_hide_header Set-Cookie;
-    proxy_hide_header Server;
-    proxy_hide_header X-Powered-By;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-    proxy_hide_header expires;
-    proxy_hide_header etag;
-    proxy_hide_header Strict-Transport-Security;
-    proxy_hide_header Content-Security-Policy;
-    proxy_hide_header X-Content-Type-Options;
-    proxy_hide_header Access-Control-Allow-Origin;
-    proxy_hide_header Referrer-Policy;
-    proxy_hide_header Expect-CT;
-    proxy_hide_header Permissions-Policy;
-    proxy_hide_header X-Frame-Options;
-    proxy_hide_header X-XSS-Protection;
     proxy_hide_header x-amz-request-id;
     proxy_hide_header x-clv-request-id;
     proxy_hide_header x-clv-s3-version;
-    error_page 400 401 403 404 405 500 501 502 503 504 505 /index.html;
+    include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
 }
