--- a/nginx/server/power.conf
+++ b/nginx/server/power.conf
@@ -32,6 +32,7 @@ server {
   }
 
   location /geocoding/geosearch/ {
+    set $BKG_GEOCODING_SECRET abc;
     rewrite ^\/geocoding\/geosearch\/(.*) /gdz_ortssuche__${BKG_GEOCODING_SECRET}/geosearch.json$1 break;
     proxy_pass https://sg.geodatenzentrum.de/;
 
