--- a/chart/power/values-production.yaml
+++ b/chart/power/values-production.yaml
@@ -6,7 +6,7 @@ replicaCount: 2
 
 image:
   repository: de.icr.io/power/power
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   tag: production
 
 imagePullSecrets:
